cmake_minimum_required(VERSION 3.14)
project(HPS)

set(CMAKE_CXX_STANDARD 17)

add_executable(byteorder byteorder.cpp set_send_buf.cpp set_recv_buf.cpp access_daytime.cpp test_dup.cpp test_writev.cpp test_sendfile.cpp test_splice.cpp test_tee.cpp test_uid.cpp use_select.cpp mtlt.cpp oneshot.cpp unblockconnect.cpp talk_cli.cpp talk_serv.cpp multi_port.cpp unievent.cpp sigurg.cpp connect_timeout.cpp list_timer.h nonactive_conn.cpp simple_client.cpp)
add_executable(test_listen test_listen.cpp myutili.h)
add_executable(test_accept test_accept.cpp myutili.h)
add_executable(oobsend oobsend.cpp myutili.h)
add_executable(oobrecv oobrecv.cpp myutili.h)
add_executable(reuse_address reuse_address.cpp myutili.h)
add_executable(set_send_buf set_send_buf.cpp myutili.h)
add_executable(set_recv_buf set_recv_buf.cpp myutili.h)
add_executable(access_daytime access_daytime.cpp myutili.h)
add_executable(test_dup test_dup.cpp myutili.h)
add_executable(test_writev test_writev.cpp myutili.h)
add_executable(test_sendfile test_sendfile.cpp myutili.h)
add_executable(test_splice test_splice.cpp myutili.h)
add_executable(test_tee test_tee.cpp myutili.h)
add_executable(test_uid test_uid.cpp)
add_executable(use_select use_select.cpp myutili.h)
add_executable(mtlt mtlt.cpp myutili.h)
add_executable(oneshot oneshot.cpp myutili.h)
add_executable(unblockconnect unblockconnect.cpp myutili.h)
add_executable(talk_cli talk_cli.cpp myutili.h)
add_executable(talk_serv talk_serv.cpp myutili.h)
add_executable(multi_port multi_port.cpp myutili.h)
add_executable(unievent unievent.cpp myutili.h)
add_executable(sigurg sigurg.cpp myutili.h)
add_executable(connect_timeout connect_timeout.cpp myutili.h)
add_executable(nonactive_conn nonactive_conn.cpp list_timer.h)
add_executable(simple_client simple_client.cpp myutili.h)